comment updates